# doctown-v11

./: .gitignore  README.md  pyproject.toml  test_pipeline.py  test_summarize.py
src/: main.py
src/chunk/: __init__.py  chunk.py  example.py
src/cluster/: __init__.py  cluster.py  example.py
src/docpack/: __init__.py  docpack.py  example.py
src/embed/: __init__.py  embed.py  example.py
src/ingest/: __init__.py  example.py  ingest.py
src/parse/: __init__.py  example.py  parse.py
src/summarize/: __init__.py  example.py  example_qwen_agent.py  qwen_agent_summarizer.py  summarize.py
