[project]
name = "doctown"
version = "11.0.0"
description = "Kill me at this point. Version eleven incoming."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "transformers>=4.47.0",
    "torch>=2.0.0",
    "qwen-agent[code-interpreter,gui,mcp,rag]>=0.0.31",
]
